app/src/main/kotlin/org/example/compiler/error/InvalidSyntaxException.kt
package org.example.compiler.error

class InvalidSyntaxException(val syntaxErrors: List<SyntaxErrorWithLineData>) : RuntimeException()
